@@ -58,6 +58,7 @@ CAY-2502 DataMap in DataNode tree view disappears after dbImport
 CAY-2504 Broken detection logic of NoopEventBridge in DataRowStoreFactory
 CAY-2505 EventBridge providers should be bound without scope
 CAY-2530 DB Import and Class Generation from Project is performed for removed datamaps
+CAY-2531 Importing same schema after Import Revert clears all entities in datamap
 CAY-2533 Modeler: Exception on validating ObjRelationship without db path
 
 ----------------------------------
